flexbox fix to cutoff logo/resized images

--- a/styles.css
+++ b/styles.css
@@ -30,9 +30,12 @@ body{
 .container{
     display: flex;
     align-items: center;
-    justify-content: center;
     overflow-y: hidden;
-    flex:auto    
+    min-width: 0;    
+    flex:auto;
+
+    
+ 
 
 }
 li{
@@ -50,7 +53,9 @@ li.container{
 
 #logimg{
     display: flex;
+    box-sizing: initial;
     flex-shrink: 0;
+
 }
 #logoa{
     display: flex;
@@ -58,7 +63,8 @@ li.container{
     max-width: 200px;
     padding: 10px;
     padding-bottom: 12px;
- 
+    object-fit: cover;
+    
 }
 .select{
     display: flex;
@@ -150,8 +156,8 @@ a:hover{
 .anime{
     display: flex;
     background-size: cover;
-    max-width: 200px;
-    max-height: 400px;
+    width: auto;
+    height: 400px;
     margin: 16px;
     border: 1px solid black;
     justify-content: center;
@@ -176,7 +182,7 @@ a:hover{
 
  }
 .tt{
-    margin: auto;
+    margin: 5px 16px;
     padding: 5px;
     border-radius: 7px;
     background-color: rgba(0, 0, 0, 0.5);
@@ -204,6 +210,8 @@ a:hover{
  background-color: rgba(0, 0, 0, 0.5);
  border-radius: 7px;
  margin:16px;
+ height: 10px;
+
  
  }
  ::-webkit-scrollbar-thumb:horizontal{
